--- a/carbonia/ia/Templates/dashboard.html
+++ b/carbonia/ia/Templates/dashboard.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h1>Gráficos de Consumo, TCO2 y Consumo por Distribuidora</h1>
+    <h1>Gráficos de Consumo, TCO2 y CONSUMO por Distribuidora</h1>
 
     <!-- Gráfico de Consumo Mensual -->
     <h2>Consumo Mensual</h2>
