--- a/carbonia/static/css/style.css
+++ b/carbonia/static/css/style.css
@@ -183,6 +183,7 @@ body {
 .chart {
   background-color: white;
   padding: 20px;
+  margin-bottom: 20px;
   width: 48%;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
