--- a/carbonia/ia/Templates/dashboard.html
+++ b/carbonia/ia/Templates/dashboard.html
@@ -4,21 +4,21 @@
 
 {% block content %}
     <h1>Gráficos de Consumo, TCO2 por Distribuidora</h1>
+    <div class="charts">
+        <!-- Gráfico de Consumo Mensual -->
+        <div class="chart">
+            <canvas id="consumoChart" style="width:100%; max-width:600px; height:400px;"></canvas>
+        </div>
 
-    <!-- Gráfico de Consumo Mensual -->
-    <h2>Consumo Mensual</h2>
-    <div class="chart">
-        <canvas id="consumoChart" style="width:100%; max-width:600px; height:400px;"></canvas>
-    </div>
+        <!-- Gráfico de TCO2 Mensual -->    
+        <div class="chart">
+            <canvas id="TCO2Chart" style="width:100%; max-width:600px; height:400px;"></canvas>
+        </div>
 
-    <!-- Gráfico de TCO2 Mensual -->    
-    <div class="chart">
-        <canvas id="TCO2Chart" style="width:100%; max-width:600px; height:400px;"></canvas>
-    </div>
-
-    <!-- Gráfico de Consumo por Distribuidora -->
-    <div class="chart">
-        <canvas id="distribuidoraChart" style="width:100%; max-width:600px; height:400px;"></canvas>
+        <!-- Gráfico de Consumo por Distribuidora -->
+        <div class="chart">
+            <canvas id="distribuidoraChart" style="width:100%; max-width:600px; height:400px;"></canvas>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
