--- a/carbonia/static/css/style.css
+++ b/carbonia/static/css/style.css
@@ -484,3 +484,95 @@ button {
   background-color: #27ae60;
   color: white;
 }
+
+
+/* Estilos alcance 3 */
+.initial-message {
+  font-size: 20px;
+  color: #555;
+  margin-bottom: 20px;
+  padding-left: 20px;
+}
+
+.item-container {
+  margin-top: 20px;
+  padding: 20px;
+  max-width: 800px;
+  margin-left: 20px;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 15px;
+  padding: 15px;
+  position: relative;
+}
+
+.item-number {
+      font-size: 16px;
+      font-weight: bold;
+      color: #333;
+      width: 60px;
+    }
+
+    .input-group {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+      margin-right: 15px;
+    }
+
+    .input-group label {
+      font-size: 14px;
+      color: #555;
+      margin-bottom: 5px;
+    }
+
+    /* Input and Select Styles */
+    .tipo-emision-select, .categoria-select, .carbon-value {
+      padding: 8px;
+      font-size: 16px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      width: 100%;
+    }
+
+    /* Unit Label Styling */
+    .value-input-container {
+      display: flex;
+      align-items: center;
+    }
+
+    .unit-label {
+      font-size: 16px;
+      font-weight: bold;
+      color: #555;
+      margin-left: 10px;
+    }
+
+    /* Button Styling */
+    .add-item-button-container {
+      margin-top: 20px;
+      padding-left: 20px;
+    }
+
+    .add-item-btn {
+      background-color: rgba(59, 203, 190);
+      color: white;
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.3s ease;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .add-item-btn:hover {
+      background-color: rgb(59, 177, 203);
+    }
