--- a/carbonia/ia/Templates/alcance3.html
+++ b/carbonia/ia/Templates/alcance3.html
@@ -75,7 +75,7 @@
             <span class="unit-label">-</span>
           </div>
         </div>
-        <button class="remove-image" onclick="removeItem(this)">
+        <button class="remove-item-btn" onclick="removeItem(this)">
           <i class="fa fa-trash"></i> Eliminar
         </button>
       `;
