--- a/carbonia/ia/Templates/Partials/base.html
+++ b/carbonia/ia/Templates/Partials/base.html
@@ -31,7 +31,7 @@
             <form method="post" enctype="multipart/form-data" class="file-upload-form">
               {% csrf_token %}
               <input type="file" name="pdf_file" required> <br>
-              <button class="back-button" type="submit">Subir y Procesar</button>
+              <button class="back-button" type="submit">Subir y procesar</button>
             </form>
           </div>
       
