--- a/carbonia/ia/Templates/login.html
+++ b/carbonia/ia/Templates/login.html
@@ -6,33 +6,32 @@
 <div class="login-page">
     <div class="login-container">
         <div class="logo">
-            <img src="{% static 'img/LogoColor.png' %}" alt="CarbonIA Logo">
-            <div class="brand-name">CarbonIA</div>
+            <a href="/">
+                <img src="{% static 'img/LogoColor.png' %}" alt="CarbonIA Logo">
+              </a>
         </div>
-        <div class="form-title">INGRESAR</div>
-        <div class="form-subtitle">Ingrese sus credenciales</div>
+        <div class="form-title">Iniciar sesión</div>
+        <div class="form-subtitle">Ingrese sus datos</div>
         <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
             <div class="input-group">
                 <label for="username">Nombre</label>
                 <input type="text" id="username" name="username" required>
             </div>
+            <!--
             <div class="input-group">
                 <label for="email">Correo</label>
                 <input type="email" id="email" name="email" required>
             </div>
+            -->
             <div class="input-group">
                 <label for="password">Contraseña</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <div class="checkbox-group">
-                <input type="checkbox" id="terms" name="terms" required>
-                <label for="terms">Acepto términos & condiciones</label>
-            </div>
-            <button type="submit" class="submit-btn">REGISTER</button>
+            <button type="submit" class="submit-btn">Ingresar</button>
         </form>
         <div class="link">
-            Already have an account? <a href="{% url 'login' %}">Login Here</a>
+            ¿No tienes cuenta? <a href="{% url 'login' %}">Registrate aquí</a>
         </div>
     </div>
 </div>
