--- a/carbonia/ia/Templates/login.html
+++ b/carbonia/ia/Templates/login.html
@@ -14,16 +14,18 @@
         <div class="form-subtitle">Ingrese sus datos</div>
         <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
+            <!--
             <div class="input-group">
                 <label for="username">Nombre</label>
                 <input type="text" id="username" name="username" required>
             </div>
-            <!--
+            -->
+            
             <div class="input-group">
                 <label for="email">Correo</label>
                 <input type="email" id="email" name="email" required>
             </div>
-            -->
+            
             <div class="input-group">
                 <label for="password">Contraseña</label>
                 <input type="password" id="password" name="password" required>
@@ -31,7 +33,7 @@
             <button type="submit" class="submit-btn">Ingresar</button>
         </form>
         <div class="link">
-            ¿No tienes cuenta? <a href="{% url 'login' %}">Registrate aquí</a>
+            ¿No tienes cuenta? <a href="{% url 'registro' %}">Registrate aquí</a>
         </div>
     </div>
 </div>
