--- a/carbonia/ia/Templates/alcance3.html
+++ b/carbonia/ia/Templates/alcance3.html
@@ -6,6 +6,6 @@
 {% block content %}
   <!--Título del sitio-->
   <h1 class="page-title">Alcance 3 - Huella de Carbono</h1>
-  <button onclick="location.href='{% url 'carga-item-alcance3' %}'">Cargar documentos</button>
+  <button onclick="location.href='{% url 'carga_item_alcance3' %}'">Cargar documentos</button>
   
 {% endblock %}
