--- a/carbonia/ia/Templates/Partials/base.html
+++ b/carbonia/ia/Templates/Partials/base.html
@@ -32,11 +32,11 @@
           </button>
 
           <!-- Formulario de carga de documentos -->
-          <form method="post" enctype="multipart/form-data" class="file-upload-form">
+          <!--<form method="post" enctype="multipart/form-data" class="file-upload-form">
             {% csrf_token %}
             <input type="file" name="pdf_file" required />
             <button class="back-button" type="submit">Subir y procesar</button>
-          </form>
+          </form> -->
         </div>
 
         <div class="container-fluid">
